# endstone-copper-rs

./: .gitmodules  Cargo.toml  README.md
copper/: Cargo.toml  build.rs  link.ver
copper-macros/: Cargo.toml
copper-macros/src/: lib.rs
copper/cpp/: shim.cpp
copper/src/: bridge.rs  ffi.rs  lib.rs  plugin.rs
images/: copper.kra
