[package]
name = "endstone-copper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[dependencies]
endstone-copper-macros = { path = "../copper-macros" }
autocxx = "0.27"
cxx = "1.0"

[profile.release]
lto = false

[build-dependencies]
cc = "1"
autocxx-build = "0.27"
miette = { version = "5", features = ["fancy"] }